updated gen val

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 		<title>ns</title>
 	</head>
 	<body>
-		<h1>Hello azure</h1>
+		<h1>Hello azure from CASE, RPI working on SChematron, Building Sync</h1>
+		<br />
+		<h1>please use GET and POST requests as specified</h1>
 	</body>
 </html>
