--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,31 +1,3 @@
-.quiz {
-	display: block;
-	background: linear-gradient(to bottom, #f0e2c3 0%, #f8b697 100%);
-	padding: 40px;
-	color: #000000;
-	font-size: larger;
-}
-
-.quiz button {
-	display: block;
-	margin-bottom: 10px;
-	color: #000000;
-}
-
-.quiz .correct {
-	background-color: #ffffff;
-	padding: 5px;
-	color: #11af08;
-	font-weight: bold;
-}
-
-.quiz .incorrect {
-	background-color: #ffffff;
-	padding: 5px;
-	color: #ff0c0c;
-	font-weight: bold;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 * {
 	font-family: 'Roboto', sans-serif;
@@ -40,7 +12,7 @@ body {
 	text-align: center;
 }
 .container {
-	max-width: 600px;
+	/* max-width: 600px; */
 	margin: 0 auto;
 	padding: 25px;
 }
@@ -48,10 +20,10 @@ body {
 	color: #fff;
 }
 .IntroComp {
-	margin: 35px auto;
+	margin: 50px auto;
 	background: #000;
 	border-radius: 12px;
-	padding: 25px;
+	padding: 50px;
 }
 .IntroComp h2 {
 	margin: 0 0 35px;
@@ -89,7 +61,7 @@ body {
 	color: rgb(47, 149, 207);
 }
 .IntroComp a {
-	font-size: 1.2em;
+	font-size: 1em;
 	text-align: center;
 	margin: 0 0 25px;
 	color: #ffffff;
