--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<script
 			type="text/babel"
-			src="{{url_for('static', filename='/js/IntroComp.js')}}"
+			src="{{url_for('static', filename='js/IntroComp.js')}}"
 		></script>
 	</body>
 </html>
